Remove some docusaurus mentions

--- a/docs/guides/docosaurus/markdown-features.mdx
+++ b/docs/guides/docosaurus/markdown-features.mdx
@@ -4,7 +4,7 @@ sidebar_position: 4
 
 # Markdown Features
 
-Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
+The wiki supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
 
 ## Front Matter
 
@@ -61,23 +61,23 @@ You can reference images relative to the current file as well. This is particula
 
 Markdown code blocks are supported with Syntax highlighting.
 
-    ```jsx title="src/components/HelloDocusaurus.js"
-    function HelloDocusaurus() {
+    ```jsx title="src/components/HelloWorld.js"
+    function HelloWorld() {
         return (
-            <h1>Hello, Docusaurus!</h1>
+            <h1>Hello, World!</h1>
         )
     }
     ```
 
-```jsx title="src/components/HelloDocusaurus.js"
-function HelloDocusaurus() {
-  return <h1>Hello, Docusaurus!</h1>;
+```jsx title="src/components/HelloWorld.js"
+function HelloWorld() {
+  return <h1>Hello, World!</h1>;
 }
 ```
 
 ## Admonitions
 
-Docusaurus has a special syntax to create admonitions and callouts:
+You can use special syntax to create admonitions and callouts:
 
     :::tip My tip
 
@@ -124,9 +124,9 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
+This is <Highlight color="#25c2a0">Green</Highlight> !
 
-This is <Highlight color="#1877F2">Facebook blue</Highlight> !
+This is <Highlight color="#1877F2">Blue</Highlight> !
 ```
 
 export const Highlight = ({ children, color }) => (
@@ -146,6 +146,6 @@ export const Highlight = ({ children, color }) => (
   </span>
 );
 
-This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
+This is <Highlight color="#25c2a0">Green</Highlight> !
 
-This is <Highlight color="#1877F2">Facebook blue</Highlight> !
+This is <Highlight color="#1877F2">Blue</Highlight> !
